# eliott-engine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  EngineMaster.md  push-all.bat  setup.bat
include/engine/: Engine.hpp  Scene.hpp  SceneManager.hpp  Timer.hpp
src/: Engine.cpp  Timer.cpp
